syntax = "proto3";

package acash;

service ACashDeposits {
    rpc RegisterOrder(RegisterOrderRequest) returns (RegisterOrderResponse);
}

message RegisterOrderRequest {
    double amount = 1;
    string currency = 2;
    string address = 3;
}

message AuthenticationData {
    string sci_name = 1;
    string account_email = 2;
    string signature = 3;
}

message RegisterOrderResponse {
    AuthenticationData authentication_data = 1;
    string order_id = 2;
}
